# assembly-cpp-sdk

./: .gitignore  CMakeLists.txt  Dockerfile.linux  Dockerfile.tests.linux  Dockerfile.tests.windows  Dockerfile.windows  Jenkinsfile  JenkinsfileRelease  LICENSE  README.md  runInDocker.linux.bat  runInDocker.windows.bat  testPackageInDocker.windows.bat
scripts/: prepareCode.bat  runAll.bat  runAll.sh  runCheck.bat  runTests.bat  testPackage.bat  testPackage.sh
sources/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h
sources/api/: AssemblyApi.cpp  AssemblyApi.h
sources/model/: ApiError.cpp  ApiError.h  AssembleOptions.cpp  AssembleOptions.h  AssemblyApiErrorResponse.cpp  AssemblyApiErrorResponse.h  AssemblyResponse.cpp  AssemblyResponse.h  Error.cpp  Error.h  ErrorDetails.cpp  ErrorDetails.h  FileFormatsResponse.cpp  FileFormatsResponse.h  FileResponse.cpp  FileResponse.h  FilesList.cpp  FilesList.h  FilesUploadResult.cpp  FilesUploadResult.h  Format.cpp  Format.h  FormatCollection.cpp  FormatCollection.h  LoadSaveOptionsData.cpp  LoadSaveOptionsData.h  ReportOptionsData.cpp  ReportOptionsData.h  StorageFile.cpp  StorageFile.h  TemplateFileInfo.cpp  TemplateFileInfo.h
sources/model/requests/: AssembleDocumentRequest.cpp  AssembleDocumentRequest.h  CopyFileRequest.cpp  CopyFileRequest.h  CopyFolderRequest.cpp  CopyFolderRequest.h  CreateFolderRequest.cpp  CreateFolderRequest.h  DeleteFileRequest.cpp  DeleteFileRequest.h  DeleteFolderRequest.cpp  DeleteFolderRequest.h  DownloadFileRequest.cpp  DownloadFileRequest.h  FileCopyFileRequest.cpp  FileCopyFileRequest.h  FileDeleteFileRequest.cpp  FileDeleteFileRequest.h  FileDownloadFileRequest.cpp  FileDownloadFileRequest.h  FileMoveFileRequest.cpp  FileMoveFileRequest.h  FileUploadFileRequest.cpp  FileUploadFileRequest.h  FolderCopyFolderRequest.cpp  FolderCopyFolderRequest.h  FolderCreateFolderRequest.cpp  FolderCreateFolderRequest.h  FolderDeleteFolderRequest.cpp  FolderDeleteFolderRequest.h  FolderGetFilesListRequest.cpp  FolderGetFilesListRequest.h  FolderMoveFolderRequest.cpp  FolderMoveFolderRequest.h  GetFilesListRequest.cpp  GetFilesListRequest.h  GetSupportedFileFormatsRequest.cpp  GetSupportedFileFormatsRequest.h  MoveFileRequest.cpp  MoveFileRequest.h  (+6 more)
tests/: CMakeLists.txt  TestBase.cpp  TestBase.h  apiTest.cpp
